@@ -1,1 +1,4 @@
-SUBDIRS = src doc tests 
+SUBDIRS = m4  src doc 
+ACLOCAL_AMFLAGS = -I m4
+
+EXTRA_DIST = config.rpath
