@@ -33,7 +33,6 @@
 struct cmdtbl_s
 {
   const char *name;
-  int cmd_id;
   int (*handler)(ASSUAN_CONTEXT, char *line);
 };
 
@@ -182,6 +181,14 @@ void _assuan_log_sanitized_string (const char *string);
 ssize_t _assuan_simple_read (ASSUAN_CONTEXT ctx, void *buffer, size_t size);
 ssize_t _assuan_simple_write (ASSUAN_CONTEXT ctx, const void *buffer,
 			      size_t size);
+
+#ifdef HAVE_FOPENCOOKIE
+/* We have to implement funopen in terms of glibc's fopencookie. */
+FILE *funopen(const void *cookie, cookie_read_function_t *readfn,
+              cookie_write_function_t *writefn,
+              cookie_seek_function_t *seekfn,
+              cookie_close_function_t *closefn);
+#endif /*HAVE_FOPENCOOKIE*/
 
 #endif /*ASSUAN_DEFS_H*/
 
