@@ -1,3 +1,14 @@
+2003-04-29  Werner Koch  <wk@gnupg.org>
+
+	* libassuan.m4: New. Based on libgrypt.m4.
+	* Makefile.am (m4data_DATA): New.
+
+	* assuan.h (AssuanCommand): Removed.
+
+	* assuan-handler.c: Remove the cmd_id element,
+	(assuan_register_command): Likewise.  Note that semantics changed.
+	(_assuan_register_std_commands): Adjusted.
+
 2003-02-22  Neal H. Walfield  <neal@g10code.de>
 
 	* Makefile.am (bin_SCRIPTS): Renamed from bin_PROGRAMS.
